traefik-deployment/external_lets_encrypt_ldap/nginx-deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: nginx-ldap-auth
  namespace: ingress-traefik
  labels:
    app: nginx-ldap-auth
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx-ldap-auth
    spec:
      serviceAccountName: nginx-ldap-auth
      containers:
      - image: tpimenta/nginx-ldap-auth:latest
        name: nginx-ldap-auth
        command:
        - "/usr/local/bin/nginx-ldap-auth"
        - "--config"
        - "/etc/nginx-ldap-auth/config.yaml"
        ports:
        - name: http
          containerPort: 5555
        volumeMounts:
        - name: config
          mountPath: /etc/nginx-ldap-auth
      volumes:
      - name: config
        secret:
          secretName: nginx-ldap-auth
          items:
          - key: config.yaml
            path: config.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: nginx-ldap-auth
  namespace: ingress-traefik
spec:
  type: ClusterIP
  ports:
  - name: nginx-ldap-auth
    port: 5555
    protocol: TCP
    targetPort: 5555
  selector:
    app: nginx-ldap-auth
